[gd_scene load_steps=37 format=2]

[ext_resource path="res://libraries/Blocks.tres" type="MeshLibrary" id=1]
[ext_resource path="res://libraries/safe_block.tres" type="MeshLibrary" id=2]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/wall_material.tres" type="Material" id=4]
[ext_resource path="res://scripts/Level 7.gd" type="Script" id=5]
[ext_resource path="res://assets/enemyBalls.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/coin.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -3, 0.776, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "respawn_point"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -3, 0.776, 0 ) ]
}

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 1, 2 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "ball1"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 0.776, -7 ), Vector3( 1, 0.776, 7 ), Vector3( 1, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 3, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "ball2"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3, 0.776, 7 ), Vector3( 3, 0.776, -7 ), Vector3( 3, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 5, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "ball3"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 0.776, -7 ), Vector3( 5, 0.776, 7 ), Vector3( 5, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "ball4"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 7, 0.776, 7 ), Vector3( 7, 0.776, -7 ), Vector3( 7, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 9, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "ball5"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 9, 0.776, -7 ), Vector3( 9, 0.776, 7 ), Vector3( 9, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 11, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "ball6"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 11, 0.776, 7 ), Vector3( 11, 0.776, -7 ), Vector3( 11, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 13, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "ball7"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 13, 0.776, -7 ), Vector3( 13, 0.776, 7 ), Vector3( 13, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 15, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "ball8"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 15, 0.776, 7 ), Vector3( 15, 0.776, -7 ), Vector3( 15, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 17, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "ball9"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 17, 0.776, -7 ), Vector3( 17, 0.776, 7 ), Vector3( 17, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 19, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "ball10"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 19, 0.776, 7 ), Vector3( 19, 0.776, -7 ), Vector3( 19, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 21, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "ball11"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 21, 0.776, -7 ), Vector3( 21, 0.776, 7 ), Vector3( 21, 0.776, -7 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 23, 0.776, 7 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "ball12"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 23, 0.776, 7 ), Vector3( 23, 0.776, -7 ), Vector3( 23, 0.776, 7 ) ]
}

[node name="Level 7" type="Spatial"]
script = ExtResource( 5 )

[node name="respawn" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/respawn_point = SubResource( 5 )

[node name="blocks" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( -65536, 0, 0, -65535, 0, 1, -65534, 0, 0, -65533, 0, 1, -65532, 0, 0, -65531, 0, 1, -65530, 0, 0, -65529, 0, 1, -65528, 0, 0, -65527, 0, 1, -65526, 0, 0, -65525, 0, 1, -65536, 1, 1, -65535, 1, 0, -65534, 1, 1, -65533, 1, 0, -65532, 1, 1, -65531, 1, 0, -65530, 1, 1, -65529, 1, 0, -65528, 1, 1, -65527, 1, 0, -65526, 1, 1, -65525, 1, 0, -65536, 2, 0, -65535, 2, 1, -65534, 2, 0, -65533, 2, 1, -65532, 2, 0, -65531, 2, 1, -65530, 2, 0, -65529, 2, 1, -65528, 2, 0, -65527, 2, 1, -65526, 2, 0, -65525, 2, 1, -65536, 3, 1, -65535, 3, 0, -65534, 3, 1, -65533, 3, 0, -65532, 3, 1, -65531, 3, 0, -65530, 3, 1, -65529, 3, 0, -65528, 3, 1, -65527, 3, 0, -65526, 3, 1, -65525, 3, 0, -65536, 65532, 0, -65535, 65532, 1, -65534, 65532, 0, -65533, 65532, 1, -65532, 65532, 0, -65531, 65532, 1, -65530, 65532, 0, -65529, 65532, 1, -65528, 65532, 0, -65527, 65532, 1, -65526, 65532, 0, -65525, 65532, 1, -65536, 65533, 1, -65535, 65533, 0, -65534, 65533, 1, -65533, 65533, 0, -65532, 65533, 1, -65531, 65533, 0, -65530, 65533, 1, -65529, 65533, 0, -65528, 65533, 1, -65527, 65533, 0, -65526, 65533, 1, -65525, 65533, 0, -65536, 65534, 0, -65535, 65534, 1, -65534, 65534, 0, -65533, 65534, 1, -65532, 65534, 0, -65531, 65534, 1, -65530, 65534, 0, -65529, 65534, 1, -65528, 65534, 0, -65527, 65534, 1, -65526, 65534, 0, -65525, 65534, 1, -65536, 65535, 1, -65535, 65535, 0, -65534, 65535, 1, -65533, 65535, 0, -65532, 65535, 1, -65531, 65535, 0, -65530, 65535, 1, -65529, 65535, 0, -65528, 65535, 1, -65527, 65535, 0, -65526, 65535, 1, -65525, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="safe" type="Spatial" parent="."]

[node name="safe" type="GridMap" parent="safe"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65524, 65535, 0, -65523, 65535, 0, -65522, 65535, 0, -3, 65535, 0, -2, 65535, 0, -1, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="goal" type="Area" parent="safe"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="safe/goal"]
shape = SubResource( 1 )

[node name="walls" type="Spatial" parent="."]

[node name="wall1" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -3, 0, 1, 0, 1, 0, -1.31134e-07, -3, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall1"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1"]
shape = SubResource( 3 )

[node name="wall2" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -3, 0, 1, 0, 1, 0, -1.31134e-07, -3, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall2"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall2"]
shape = SubResource( 3 )

[node name="wall3" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -3, 0, 1, 0, 1, 0, -1.31134e-07, 27, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall3"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall3"]
shape = SubResource( 3 )

[node name="wall4" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -3, 0, 1, 0, 1, 0, -1.31134e-07, 27, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall4"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall4"]
shape = SubResource( 3 )

[node name="wall5" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -12, 0, 1, 0, 1, 0, -5.24537e-07, 12, 0, -9 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall5"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall5"]
shape = SubResource( 3 )

[node name="wall6" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -12, 0, 1, 0, 1, 0, -5.24537e-07, 12, 0, 9 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall6"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall6"]
shape = SubResource( 3 )

[node name="wall7" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, 25, 0, 7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall7"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall7"]
shape = SubResource( 3 )

[node name="wall8" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, 25, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall8"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall8"]
shape = SubResource( 3 )

[node name="wall9" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, -1, 0, -7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall9"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall9"]
shape = SubResource( 3 )

[node name="wall10" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 4.52987e-07, 0, 1, 0, -1.50996e-07, 0, -3, -1, 0, 7 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall10"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall10"]
shape = SubResource( 3 )

[node name="wall11" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 6.03983e-07, 0, 1, 0, -1.50996e-07, 0, -4, -7, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall11"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall11"]
shape = SubResource( 3 )

[node name="wall12" type="StaticBody" parent="walls"]
transform = Transform( -1, 0, 6.03983e-07, 0, 1, 0, -1.50996e-07, 0, -4, 31, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="walls/wall12"]
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall12"]
shape = SubResource( 3 )

[node name="enemy" type="Spatial" parent="."]

[node name="enemyBalls" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 1, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls"]
autoplay = "ball1"
anims/RESET = SubResource( 6 )
anims/ball1 = SubResource( 7 )

[node name="enemyBalls2" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 3, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls2"]
autoplay = "ball2"
anims/RESET = SubResource( 8 )
anims/ball2 = SubResource( 9 )

[node name="enemyBalls3" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 5, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls3"]
autoplay = "ball3"
anims/RESET = SubResource( 10 )
anims/ball3 = SubResource( 11 )

[node name="enemyBalls4" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 7, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls4"]
autoplay = "ball4"
anims/RESET = SubResource( 12 )
anims/ball4 = SubResource( 13 )

[node name="enemyBalls5" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 9, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls5"]
autoplay = "ball5"
anims/RESET = SubResource( 14 )
anims/ball5 = SubResource( 15 )

[node name="enemyBalls6" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 11, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls6"]
autoplay = "ball6"
anims/RESET = SubResource( 16 )
anims/ball6 = SubResource( 17 )

[node name="enemyBalls7" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 13, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls7"]
autoplay = "ball7"
anims/RESET = SubResource( 18 )
anims/ball7 = SubResource( 19 )

[node name="enemyBalls8" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 15, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls8"]
autoplay = "ball8"
anims/RESET = SubResource( 20 )
anims/ball8 = SubResource( 21 )

[node name="enemyBalls9" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 17, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls9"]
autoplay = "ball9"
anims/RESET = SubResource( 22 )
anims/ball9 = SubResource( 23 )

[node name="enemyBalls10" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 19, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls10"]
autoplay = "ball10"
anims/RESET = SubResource( 24 )
anims/ball10 = SubResource( 25 )

[node name="enemyBalls11" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 21, 0.776, -7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls11"]
autoplay = "ball11"
anims/RESET = SubResource( 26 )
anims/ball11 = SubResource( 27 )

[node name="enemyBalls12" parent="enemy" instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 23, 0.776, 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy/enemyBalls12"]
autoplay = "ball12"
anims/RESET = SubResource( 28 )
anims/ball12 = SubResource( 29 )

[node name="coins" type="Spatial" parent="."]

[node name="coin" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 0.776, -7 )

[node name="coin2" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1, 0.776, 7 )

[node name="coin3" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 23, 0.776, 7 )

[node name="coin4" parent="coins" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 23, 0.776, -7 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -3, 0.776, 0 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 12, 16, 9 )

[connection signal="reset_level" from="." to="coins/coin" method="_on_Level_7_reset_level"]
[connection signal="reset_level" from="." to="coins/coin2" method="_on_Level_7_reset_level"]
[connection signal="reset_level" from="." to="coins/coin3" method="_on_Level_7_reset_level"]
[connection signal="reset_level" from="." to="coins/coin4" method="_on_Level_7_reset_level"]
[connection signal="body_entered" from="safe/goal" to="." method="_on_goal_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls2" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls3" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls4" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls5" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls6" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls7" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls8" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls9" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls10" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls11" to="." method="_on_enemyBalls_body_entered"]
[connection signal="body_entered" from="enemy/enemyBalls12" to="." method="_on_enemyBalls_body_entered"]
[connection signal="coin_collect" from="coins/coin" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin2" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin3" to="." method="_on_coin_coin_collect"]
[connection signal="coin_collect" from="coins/coin4" to="." method="_on_coin_coin_collect"]
